--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,7 +31,7 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: $primary-font;
-  /* color: $light-color; */
+  color: $light-color;
 }
 
 ul {
