--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -31,3 +31,11 @@ $light-color:#FEFEFE;
         margin-left: 2rem;
     }
 }
+
+/** MIXINS **/
+
+@mixin flex-display($display, $align-items, $justify-content) {
+    display: $display;
+    align-items: $align-items;
+    justify-content: $justify-content;
+}
