--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -109,6 +109,7 @@ img {
           top: 12rem;
           transition: all .5s;
           opacity: 0;
+          visibility: hidden;
 
           li {
             line-height: 4rem;
@@ -120,6 +121,7 @@ img {
 
           & .dropdown {
             opacity: 1;
+            visibility: visible;
             top: 8rem;
           }
         }
@@ -156,5 +158,34 @@ img {
     }
 
 
+  }
+}
+
+
+/**  MAIN SLIDER **/
+
+.main-slider {
+  .single-slide {
+    position: relative;
+
+    .slide-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(ellipse at center, rgba(0,0,0, .5) 0%, rgba(0,0,0, .9) 100%);
+
+      .slide-content {
+        position: absolute;
+        top: 25%;
+        width: 80%;
+        border-top: 2px solid $primary-color;
+        border-bottom: 2px solid $primary-color;
+        padding: 10rem 7rem;
+        background: linear-gradient(to right, rgba(0,0,0, .6), rgba(0,0,0, 1));
+
+      }
+    }
   }
 }
