--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,14 @@ body {
   width: 100%;
 }
 
+h2 {
+  font-family: $primary-font;
+  font-size: 5rem;
+  color: $light-color;
+  letter-spacing: .5rem;
+  font-weight: 300;
+}
+
 a {
   text-decoration: none;
   text-transform: uppercase;
@@ -185,6 +193,48 @@ img {
         padding: 10rem 7rem;
         background: linear-gradient(to right, rgba(0,0,0, .6), rgba(0,0,0, 1));
 
+        p {
+          font-size: 1.4rem;
+        }
+
+      }
+    }
+  }
+}
+
+/** CUSTOM  OWL CAROUSEL **/
+.owl-theme {
+  position: relative;
+
+  .owl-dots {
+    position: absolute;
+    top: 6rem;
+    right: 10%;
+    z-index: 5;
+    display: flex;
+
+    .owl-dot {
+      display: inline-block;
+      margin-right: 1.3rem;
+      width: 3.3rem;
+      height: 3.3rem;
+      text-align: center;
+      border-radius: 4rem;
+      background-color: transparent;
+      transition: all .5s;
+
+      &.active, &:hover {
+        color: $primary-color;
+
+        span {
+          background-color: transparent;
+        }
+      }
+
+      span {
+        font-size: 2.5rem;
+        font-family: $primary-font;
+        background: transparent;
       }
     }
   }
