--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -32,6 +32,18 @@ $light-color:#FEFEFE;
     }
 }
 
+.text-light {
+    color: $light-color;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-primary {
+    color: $primary-color;
+}
+
 /** MIXINS **/
 
 @mixin flex-display($display, $align-items, $justify-content) {
