--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,6 +28,10 @@ body {
   width: 100%;
 }
 
+section {
+  padding: 8rem 0;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: $primary-font;
   color: $primary-color;
@@ -43,6 +47,10 @@ h1 {
 h2 {
   font-size: 5rem;
   color: $light-color;
+}
+
+h3 {
+  font-size: 2.4rem;
 }
 
 h4 {
@@ -278,4 +286,131 @@ img {
       }
     }
   }
+}
+
+
+/** RECENT GAMES SECTION **/
+
+.recent-games {
+  background-color: $light-color;
+
+  &-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-row-gap: 4rem;
+    grid-column-gap: 8rem;
+    grid-template-areas: 'item-1 item-1 item-1 item-2'
+                         'item-3 item-4 item-5 item-6'  ;
+
+    .recent-game {
+      width: 100%;
+      height: 100%;
+      background-color: $secondary-color;
+
+      &-thumbnail {
+        position: relative;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          transition: all .5s;
+        }
+
+        &::after {
+          position: absolute;
+          top: 0;
+          left: 0;
+          content: '';
+          background-color: rgba($primary-color, .6);
+          width: 100%;
+          height: 100%;
+          visibility: hidden;
+          opacity: 0;
+          transition: all .5s;
+        }
+      }
+
+      &:hover, &:focus {
+
+        .recent-game-thumbnail {
+          &::after {
+            visibility: visible;
+            opacity: 1;
+          }
+
+          img {
+            transform: scale(1.1) rotate(5deg);
+            transition: all .5s;
+          }
+
+          .rating {
+            opacity: 1;
+            transition: all .5s;
+          }
+        }
+      }
+
+      &-content {
+        padding: 2rem;
+
+        .game-title {
+          margin-bottom: 2rem;
+
+          a {
+            transition: all .5s;
+
+            &:hover {
+              color: darken($light-color, 30%);
+            }
+          }
+        }
+
+        .game-meta {
+          @include flex-display(flex, center, space-between);
+          font-size: 1.6rem;
+
+          .game-date {
+            color: $date-color;
+            
+            transition: all .5s;
+
+            &:hover {
+              color: darken($date-color, 30%);
+            }
+          }
+        }
+
+        p {
+          font-size: 1.3rem;
+          line-height: 1.8;
+        }
+      }
+    }
+  }
+}
+
+
+.recent-game-1 {
+  grid-area: item-1;
+}
+
+.recent-game-2 {
+  grid-area: item-2;
+}
+
+.recent-game-3 {
+  grid-area: item-3;
+}
+
+.recent-game-4 {
+  grid-area: item-4;
+}
+
+.recent-game-5 {
+  grid-area: item-5;
+}
+
+.recent-game-6 {
+  grid-area: item-6;
 }
