--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -12,6 +12,7 @@ $date-color: #FFB320;
 $comment-color:#08ABBD;
 $gray-color:#9F9F9F;
 $light-color:#FEFEFE;
+$general-transition: all .5s;
 
 
 /** UTILITIES **/
