--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,7 +13,7 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 10px; // 1 rem 10px
 }
 
 body {
@@ -91,7 +91,7 @@ img {
 
         a {
           font-size: 2rem;
-          transition: all .5s;
+          transition: $general-transition;
         }
 
         &:hover a {
@@ -121,7 +121,7 @@ img {
       li {
         line-height: 8rem;
         position: relative;
-        transition: all .5s;
+        transition: $general-transition;
 
         .dropdown {
           position: absolute;
@@ -130,7 +130,7 @@ img {
           left: 50%;
           z-index: 10;
           top: 12rem;
-          transition: all .5s;
+          transition: $general-transition;
           opacity: 0;
           visibility: hidden;
 
@@ -237,7 +237,7 @@ img {
       text-align: center;
       border-radius: 4rem;
       background-color: transparent;
-      transition: all .5s;
+      transition: $general-transition;
 
       &.active, &:hover {
         color: $primary-color;
@@ -299,9 +299,32 @@ img {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-row-gap: 4rem;
-    grid-column-gap: 8rem;
+    grid-column-gap: 4rem;
     grid-template-areas: 'item-1 item-1 item-1 item-2'
                          'item-3 item-4 item-5 item-6'  ;
+
+    .recent-game-featured {
+      @include flex-display(flex, center, space-between);
+
+      .recent-game-thumbnail {
+        height: 100%;
+
+        img {
+          height: 100%;
+        }
+      }
+
+      .rating {
+        width: 5rem;
+        height: 5rem;
+        line-height: 5rem;
+        font-size: 2rem;
+      }
+
+      .game-title {
+        font-size: 3rem !important;
+      }
+    }
 
     .recent-game {
       width: 100%;
@@ -314,7 +337,7 @@ img {
 
         img {
           width: 100%;
-          transition: all .5s;
+          transition: $general-transition;
         }
 
         &::after {
@@ -341,12 +364,12 @@ img {
 
           img {
             transform: scale(1.1) rotate(5deg);
-            transition: all .5s;
+            transition: $general-transition;
           }
 
           .rating {
             opacity: 1;
-            transition: all .5s;
+            transition: $general-transition;
           }
         }
       }
@@ -355,10 +378,12 @@ img {
         padding: 2rem;
 
         .game-title {
-          margin-bottom: 2rem;
+          margin-bottom: 1.2rem;
+          font-size: 1.8rem;
+          letter-spacing: 0;
 
           a {
-            transition: all .5s;
+            transition: $general-transition;
 
             &:hover {
               color: darken($light-color, 30%);
@@ -368,12 +393,12 @@ img {
 
         .game-meta {
           @include flex-display(flex, center, space-between);
-          font-size: 1.6rem;
+          font-size: 1.2rem;
 
           .game-date {
             color: $date-color;
             
-            transition: all .5s;
+            transition: $general-transition;
 
             &:hover {
               color: darken($date-color, 30%);
