--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -439,3 +439,24 @@ img {
 .recent-game-6 {
   grid-area: item-6;
 }
+
+/** LATEST REVIEWED SECTION **/
+
+.last-reviewed {
+  height: 50vh;
+  @include flex-display(flex, center, space-between);
+  padding: 0;
+  background-color: $secondary-color;
+
+  &-detail {
+    flex-basis: 40%;
+  }
+
+  &-image {
+    flex-basis: 60%;
+    background-image: linear-gradient(to right bottom, rgba($primary-color, 1), rgba($primary-color, .1)),  url(../img/game_3.jpg);
+    background-size: cover;
+    height: 100%;
+    clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
